--- a/shader/yanse.html
+++ b/shader/yanse.html
@@ -13,43 +13,67 @@
   }
 </style>
 <body>
-  <canvas id="mycanvas" width="1200" height="1200"></canvas>
+  <canvas id="mycanvas" width="600" height="600"></canvas>
+  <span style="color:rgb(255,212,53);font-size: 28px;">颜色</span>
 </body>
 <script id="fragmentShader" type="x-shader/x-fragment">
   #ifdef GL_ES
-precision mediump float;
-#endif
+  precision mediump float;
+  #endif
+  
+  #define TWO_PI 6.28318530718
+  
+  uniform vec2 u_resolution;
+  uniform float u_time;
+  
+  //  Function from Iñigo Quiles
+  //  https://www.shadertoy.com/view/MsS3Wc
+  vec3 hsb2rgb( in vec3 c ){
+      vec3 rgb = clamp(abs(mod(c.x*6.0+vec3(0.0,4.0,2.0),
+                               6.0)-3.0)-1.0,
+                       0.0,
+                       1.0 );
+      rgb = rgb*rgb*(3.0-2.0*rgb);
+      return c.z * mix( vec3(1.0), rgb, c.y);
+  }
+  vec3 hsv2rgb_smooth( in vec3 c )
+{
+    vec3 rgb = clamp( abs(mod(c.x*6.0+vec3(0.0,4.0,2.0),6.0)-3.0)-1.0, 0.0, 1.0 );
 
-#define TWO_PI 3.14159265359 * 2.0
+	rgb = rgb*rgb*(3.0-2.0*rgb); // cubic smoothing	
 
-uniform vec2 u_resolution;
-uniform vec2 u_mouse;
-uniform float u_time;
-
-vec3 hsb2rgb( in vec3 c ){
-  vec3 rgb = clamp(abs(mod(c.x*6.0+vec3(0.0,4.0,2.0),
-                           6.0)-3.0)-1.0,
-                   0.0,
-                   1.0 );
-  rgb = rgb*rgb*(3.0-2.0*rgb);
-  return c.z * mix( vec3(1.0), rgb, c.y);
+	return c.z * mix( vec3(1.0), rgb, c.y);
+}
+vec3 rgb2hsb( in vec3 c ){
+  vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
+  vec4 p = mix(vec4(c.bg, K.wz),
+               vec4(c.gb, K.xy),
+               step(c.b, c.g));
+  vec4 q = mix(vec4(p.xyw, c.r),
+               vec4(c.r, p.yzx),
+               step(p.x, c.r));
+  float d = q.x - min(q.w, q.y);
+  float e = 1.0e-10;
+  return vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)),
+              d / (q.x + e),
+              q.x);
 }
 
-void main(){
-  vec2 st = gl_FragCoord.xy/u_resolution;
-  vec3 color = vec3(0.0);
-
-  // Use polar coordinates instead of cartesian
-  vec2 toCenter = vec2(0.5)-st;
-  float angle = atan(toCenter.y,toCenter.x);
-  float radius = length(toCenter)*2.0;
-
-  // Map the angle (-PI to PI) to the Hue (from 0 to 1)
-  // and the Saturation to the radius
-  color = hsb2rgb(vec3((angle/TWO_PI)+0.5,radius,1.0));
-
-  gl_FragColor = vec4(color,1.0);
-}
+  void main(){
+      vec2 st = gl_FragCoord.xy/u_resolution;
+      vec3 color = vec3(0.0);
+  
+      // Use polar coordinates instead of cartesian
+      vec2 toCenter = vec2(0.5)-st;
+      float angle = atan(toCenter.y,toCenter.x)+u_time;
+      float radius = length(toCenter)*2.0;
+  
+      // Map the angle (-PI to PI) to the Hue (from 0 to 1)
+      // and the Saturation to the radius
+      color = rgb2hsb(vec3((angle/TWO_PI)+0.5,radius,1.0));
+  
+      gl_FragColor = vec4(color,1.0);
+  }
 </script>
 <script>
   var fragment = document.getElementById('fragmentShader').textContent
