--- a/shader/xingzhuang.html
+++ b/shader/xingzhuang.html
@@ -33,38 +33,21 @@
                      1.0 );
     rgb = rgb*rgb*(3.0-2.0*rgb);
     return c.z * mix( vec3(1.0), rgb, c.y);
-}
+  }
 
-vec3 hsv2rgb_smooth( in vec3 c )
-{
-    vec3 rgb = clamp( abs(mod(c.x*6.0+vec3(0.0,4.0,2.0),6.0)-3.0)-1.0, 0.0, 1.0 );
+  vec3 setCircle(vec2 st, vec2 center, float radius, float animation) {
+    vec2 toCenter = center - st;
+    float angle = atan(toCenter.y,toCenter.x);
+    float f = radius - radius * abs(cos(angle*4.));
 
-	rgb = rgb*rgb*(3.0-2.0*rgb); // cubic smoothing	
+    float pct = length(toCenter);
 
-	return c.z * mix( vec3(1.0), rgb, c.y);
-}
 
-vec3 rgb2hsb( in vec3 c ){
-  vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
-  vec4 p = mix(vec4(c.bg, K.wz),
-               vec4(c.gb, K.xy),
-               step(c.b, c.g));
-  vec4 q = mix(vec4(p.xyw, c.r),
-               vec4(c.r, p.yzx),
-               step(p.x, c.r));
-  float d = q.x - min(q.w, q.y);
-  float e = 1.0e-10;
-  return vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)),
-              d / (q.x + e),
-              q.x);
-}
+    vec3 baseCircle = vec3(1. - smoothstep(f - .015,f,pct));
+    vec3 rgb = vec3(abs(animation*pct*2.),abs(animation*1. - pct*2.),abs(animation*1.));
 
-vec3 rect2circle(vec3 c, float length) {
-  float ret = .0;
-  vec3 blackRadius = c * vec3(1. - smoothstep(.495,.5,length));
-
-  return blackRadius;
-}
+    return baseCircle * rgb;
+  }
 
   void main(){
     vec2 st = gl_FragCoord.xy/u_resolution;
@@ -75,19 +58,19 @@ vec3 rect2circle(vec3 c, float length) {
 
     // b. The LENGTH of the vector
     //    from the pixel to the center
-      vec2 toCenter = vec2(0.5)-st;
-      float angle = atan(toCenter.y,toCenter.x);
-      pct = length(toCenter);
+      //vec2 toCenter = vec2(0.5)-st;
+      //float angle = atan(toCenter.y,toCenter.x);
+      //pct = length(toCenter);
 
     // c. The SQUARE ROOT of the vector
     //    from the pixel to the center
       //vec2 tC = vec2(0.5)-st;
       //pct = sqrt(tC.x*tC.x+tC.y*tC.y);
     
-
-    vec3 color = hsb2rgb(vec3(angle/TWO_PI+.5,pct*2.,1.));
+    //vec3 color = hsb2rgb(vec3((angle/TWO_PI)+0.5,pct*2.,1.0));
+    vec3 circle = setCircle(st, vec2(.5,.5), .3, sin(u_time));
   
-    gl_FragColor = vec4( rect2circle(color,pct), 1.0 );
+    gl_FragColor = vec4(circle, 1.0 );
   }
 </script>
 <script>
