--- a/shader/xingzhuang.html
+++ b/shader/xingzhuang.html
@@ -38,8 +38,8 @@
   vec3 setCircle(vec2 st, vec2 center, float radius, float animation) {
     vec2 toCenter = center - st;
     float angle = atan(toCenter.y,toCenter.x);
-    float f = radius - radius * abs(cos(angle*4.));
-
+    float f = radius - radius * abs(cos(TWO_PI * u_time + angle * 4.));
+  
     float pct = length(toCenter);
 
 
@@ -48,6 +48,7 @@
 
     return baseCircle * rgb;
   }
+  
 
   void main(){
     vec2 st = gl_FragCoord.xy/u_resolution;
